# gencut

./: .gitignore  README.md  SampleSettings.csv
data/: Scer-Gene-Model.csv
r/: gencut-packed.cpp  includes.cpp  pack.bat  pack.py  rapi.cpp
src/: CMakeLists.txt  gencut.cpp
src/app/: Application.cpp  Application.h  GeneCollections.h  GeneMatrix.cpp  GeneMatrix.h  GeneSignal.cpp  GeneSignal.h  GeneSignalFactory.cpp  GeneSignalFactory.h  GeneSignalList.cpp  GeneSignalList.h  GeneSignalMatrix.cpp  GeneSignalMatrix.h  GenomeCutter.cpp  GenomeCutter.h  GenomeModel.cpp  GenomeModel.h  StringConstants.cpp  StringConstants.h
src/utils/: Application.cpp  AtomBox.h  Exception.h
